infra/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: limboo
  name: limboo-remote-access-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: limboo-remote-access-service
  template:
    metadata:
      labels:
        app: limboo-remote-access-service
    spec:
      containers:
        - name: limboo-remote-access-service
          image: registry.yuri.dev.br/limboo-remote-access-service:1.0.103
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: registry-secret
