infra/service.yml
apiVersion: v1
kind: Service
metadata:
  name: limboo-remote-access-service-svc
  namespace: limboo
spec:
  selector:
    app: limboo-remote-access-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
